--- a/main.html
+++ b/main.html
@@ -11,7 +11,8 @@
 <body onload="preencherTabela()">
     <header class="algo">
     <h1>Catálogo Fotográfico - 2019</h1>
-    <button id="new" onclick="chamaRegistro()" class="btn btn-warning">Novo</button>
+    <br>
+
     </header>
     <div class="card">
         <div class="card-body">
@@ -63,6 +64,8 @@
           </div>
         </div>
       </div>
+      <br>
+      <button id="new" onclick="chamaRegistro()" class="btn btn-info">Novo</button>
 
       <script src="vendor/jquery/jquery.min.js"></script>
       <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
